# lab5

./: CMakeLists.txt  ResponsesHandler.c  ResponsesHandler.h  Utils.c  Utils.h  main.c
controller/: ComputerNetworkGraph.c  ComputerNetworkGraph.h  GraphHelper.c  GraphHelper.h
files/: 1.txt  2.txt  computers.txt  connections.txt
model/: FileHelper.c  FileHelper.h  MyList.c  MyList.h  MyVector.c  MyVector.h
model/queue/: MyQueue.c  MyQueue.h
view/: CommandHelper.c  CommandHelper.h  DialogHelper.c  DialogHelper.h  GrpahVisHelper.c  GrpahVisHelper.h  ResponsesHandler.c  ResponsesHandler.h
view/commandsHelper/: ComputerModifications.c  ComputerModifications.h  ConnectionModifications.c  ConnectionModifications.h  GraphInteraction.c  GraphInteraction.h  MainMenu.c  MainMenu.h  consts1.h  consts2.h  consts3.h
view/commandsHelper/dialgConfigs/: DialogConfig1.h  DialogConfig2.h  DialogConfig3.h  DialogConfig4.h
